# effective-octo-spoon

./: .gitignore  Cargo.toml  README.md
.github/actions/certeef/: action.yml
.github/workflows/: rust.yml
certeef/: Cargo.toml
certeef/.github/workflows/: action.yml
certeef/certeef/: Cargo.toml
certeef/src/: lib.rs
certs/: Cargo.toml
certs/src/: lib.rs
src/: main.rs
