[package]
name = "certificates_expiration_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["tls"] }
chrono = { version = "0.4", features = ["serde"] }
