[package]
name = "certeef"
version = "0.1.3"
edition = "2021"
description = "A small certificate manager"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
ansi_term = "0.12"
serde_json = "1.0"